<resources>
    <string name="app_name">RegistrasiNavigationApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">RESULT</string>
    <string name="congratulations">Congratulations</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="halo">Halo $name, untuk melanjutkan register, silahkan isi password di bawah</string>
</resources>